--- a/step19/operationtomysql/pom.xml
+++ b/step19/operationtomysql/pom.xml
@@ -1,61 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.framiere</groupId>
-    <artifactId>operations-to-mysql</artifactId>
-    <version>1.0.0</version>
-    <packaging>jar</packaging>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.20</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.16</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.2.11</version>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
+    <modelVersion>4.0.0</modelVersion>  
+    <groupId>com.github.framiere</groupId>  
+    <artifactId>operations-to-mysql</artifactId>  
+    <version>1.0.0</version>  
+    <packaging>jar</packaging>  
+    <parent> 
+        <groupId>org.springframework.boot</groupId>  
+        <artifactId>spring-boot-starter-parent</artifactId>  
+        <version>2.0.0.RELEASE</version>  
+        <relativePath/>  
+        <!-- lookup parent from repository --> 
+    </parent>  
+    <properties> 
+        <maven.compiler.source>1.8</maven.compiler.source>  
+        <maven.compiler.target>1.8</maven.compiler.target>  
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> 
+    </properties>  
+    <dependencies> 
+        <dependency> 
+            <groupId>org.apache.kafka</groupId>  
+            <artifactId>kafka-clients</artifactId>  
+            <version>2.3.0</version> 
+        </dependency>  
+        <dependency> 
+            <groupId>org.apache.kafka</groupId>  
+            <artifactId>kafka-streams</artifactId>  
+            <version>2.3.0</version>  
+            <exclusions> 
+                <exclusion> 
+                    <groupId>javax.ws.rs</groupId>  
+                    <artifactId>javax.ws.rs-api</artifactId> 
+                </exclusion> 
+            </exclusions> 
+        </dependency>  
+        <dependency> 
+            <groupId>org.projectlombok</groupId>  
+            <artifactId>lombok</artifactId>  
+            <version>1.16.20</version>  
+            <scope>compile</scope> 
+        </dependency>  
+        <dependency> 
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-starter-data-jpa</artifactId>  
+            <exclusions> 
+                <exclusion> 
+                    <groupId>javax.transaction</groupId>  
+                    <artifactId>javax.transaction-api</artifactId> 
+                </exclusion>  
+                <exclusion> 
+                    <groupId>javax.annotation</groupId>  
+                    <artifactId>javax.annotation-api</artifactId> 
+                </exclusion>  
+                <exclusion> 
+                    <groupId>org.springframework.boot</groupId>  
+                    <artifactId>spring-boot-starter-aop</artifactId> 
+                </exclusion>  
+                <exclusion> 
+                    <groupId>org.springframework.boot</groupId>  
+                    <artifactId>spring-boot-starter-jdbc</artifactId> 
+                </exclusion>  
+                <exclusion> 
+                    <groupId>org.springframework.boot</groupId>  
+                    <artifactId>spring-boot-starter-logging</artifactId> 
+                </exclusion> 
+            </exclusions> 
+        </dependency>  
+        <dependency> 
+            <groupId>mysql</groupId>  
+            <artifactId>mysql-connector-java</artifactId>  
+            <version>8.0.16</version> 
+        </dependency> 
+    </dependencies>  
+    <build> 
+        <plugins> 
+            <plugin> 
+                <groupId>org.springframework.boot</groupId>  
+                <artifactId>spring-boot-maven-plugin</artifactId> 
+            </plugin> 
+        </plugins> 
+    </build>  
+    <dependencyManagement> 
+        <dependencies> 
+            <dependency> 
+                <groupId>org.hibernate</groupId>  
+                <artifactId>hibernate-core</artifactId>  
+                <version>5.2.14.Final</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework.data</groupId>  
+                <artifactId>spring-data-jpa</artifactId>  
+                <version>2.0.5.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework</groupId>  
+                <artifactId>spring-aspects</artifactId>  
+                <version>5.0.4.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework.boot</groupId>  
+                <artifactId>spring-boot</artifactId>  
+                <version>2.0.0.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework.boot</groupId>  
+                <artifactId>spring-boot-autoconfigure</artifactId>  
+                <version>2.0.0.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework</groupId>  
+                <artifactId>spring-core</artifactId>  
+                <version>5.0.4.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.yaml</groupId>  
+                <artifactId>snakeyaml</artifactId>  
+                <version>1.19</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework</groupId>  
+                <artifactId>spring-aop</artifactId>  
+                <version>5.0.4.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.aspectj</groupId>  
+                <artifactId>aspectjweaver</artifactId>  
+                <version>1.8.13</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>com.zaxxer</groupId>  
+                <artifactId>HikariCP</artifactId>  
+                <version>2.7.8</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.springframework</groupId>  
+                <artifactId>spring-jdbc</artifactId>  
+                <version>5.0.4.RELEASE</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>ch.qos.logback</groupId>  
+                <artifactId>logback-classic</artifactId>  
+                <version>1.2.3</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.apache.logging.log4j</groupId>  
+                <artifactId>log4j-to-slf4j</artifactId>  
+                <version>2.10.0</version> 
+            </dependency>  
+            <dependency> 
+                <groupId>org.slf4j</groupId>  
+                <artifactId>jul-to-slf4j</artifactId>  
+                <version>1.7.25</version> 
+            </dependency> 
+        </dependencies> 
+    </dependencyManagement> 
 </project>
